# darwinmcp

./: .darwinmcp-progress.json  .gitignore  CHANGELOG.md  LICENSE  NOTICE  R18_LICENSE_CHECK.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: _ledger.json
examples/: 01_hello_evolve.py
experiments/_wip/: .keep
src/darwinmcp/: __init__.py  cli.py  mcp_compat.py
src/darwinmcp/bootstrap/: __init__.py  honest_marketing.py  progress.py
src/darwinmcp/eval/: __init__.py  fitness_base.py  fitness_tasks.py  sandbox_base.py  sandbox_subprocess.py
src/darwinmcp/evolve/: __init__.py  llm.py  mutator.py  selection.py
src/darwinmcp/lineage/: __init__.py  circuitmap.py  graph.py  svg.py
src/darwinmcp/seed/: __init__.py
src/darwinmcp/seed/fs_tool/: __init__.py  manifest.json  server.py
src/darwinmcp/trace/: __init__.py  tool_call_logger.py
tests/: conftest.py
tests/e2e/: test_quickstart.py  test_smoke.py
tests/honest_marketing/: test_forbidden_until_measured.py  test_inv1_no_extra_placeholders.py  test_inv2_regex_fuzz.py  test_inv5_cli_main_exists.py  test_readme_no_unmeasured_numbers.py
tests/integration/: test_fitness_monotonic.py
tests/unit/: test_circuitmap.py  test_cli.py  test_fitness.py  test_honest_marketing.py  test_lineage.py  test_lineage_merkle.py  test_llm.py  test_mcp_compat.py  test_mutator.py  test_progress.py  test_sandbox.py  test_selection.py  test_trace.py
