[project]
name = "darwinmcp"
version = "0.1.0a3"
description = "Evolve MCP server.py code via subprocess sandbox fitness with lineage × tool-trace interpretability (pre-alpha; SWE-bench Verified adapter is v0.2 backlog)."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "hinanohart", email = "runzaisongpu95@gmail.com" }
]
maintainers = [
    { name = "hinanohart", email = "runzaisongpu95@gmail.com" }
]
keywords = ["mcp", "evolution", "evolvable-server", "shinka-evolve", "interpretability", "swe-bench-roadmap"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    # v0.1 only imports `networkx` and `importlib.metadata` (for `mcp_compat`).
    # The other four are pinned for Phase-1 forward-compatibility — see README §
    # "Install" for the honest disclosure. They will be split into `[phase1]` extra
    # at v0.1.0 GA when the import edge is fully wired.
    "mcp>=1.25,<2",
    "huggingface-hub>=0.24,<2",
    "pydantic>=2.5,<3",
    "networkx>=3.2",
    "rich>=13",
]

[project.optional-dependencies]
# NOTE on shinka-evolve: deferred entirely from v0.1 deps.
# Reason: PyPI release-cap at 0.0.6, which pins `httpx==0.27` and conflicts
# with `mcp>=1.25` (which requires httpx>=0.27.1). The v0.1 mutator uses
# DummyLLM only and does not import shinka_evolve. v0.2 will integrate via
# `pip install darwinmcp[shinka-git]` using a git+https pin against a
# compatible upstream commit. See R18_LICENSE_CHECK.md § 1.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "pip-licenses>=4.4",
]

[project.urls]
Homepage      = "https://github.com/hinanohart/darwinmcp"
Repository    = "https://github.com/hinanohart/darwinmcp"
Issues        = "https://github.com/hinanohart/darwinmcp/issues"
Changelog     = "https://github.com/hinanohart/darwinmcp/blob/main/CHANGELOG.md"
"License Audit" = "https://github.com/hinanohart/darwinmcp/blob/main/R18_LICENSE_CHECK.md"

[project.scripts]
darwinmcp = "darwinmcp.cli:main"

[build-system]
requires = ["uv_build>=0.11.4,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # line length handled at format time

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "e2e: end-to-end smoke (subprocess sandbox, slow)",
    "honest_marketing: README / docs honesty enforcement (INV-2)",
]
